--- a/matching-game.css
+++ b/matching-game.css
@@ -25,44 +25,49 @@ h1{
     background-color: rgb(70, 95, 123);
 }
 img {
-position: absolute;
+    position: absolute;
+    max-width: 15%;
+    height: auto;
 }
-#leftSide {
-position: absolute;
-width: 500px;
-height: 500px;
-margin-left: 30px;
-border: groove 5px rgb(59, 59, 75)
+.gameContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px;
 }
-#rightSide {
-position: absolute;
-width: 500px;
-height: 500px;
-left: 550px; 
-padding: 0;
-border: groove 5px rgb(59, 59, 75)
+.gamePanel {
+    flex: 1 1 45%;
+    max-width: 500px;
+    aspect-ratio: 1 / 1;
+    border: groove 5px rgb(59, 59, 75);
+    position: relative;
+  }
+#cloneLeftSide {
+    margin: 0;
+    padding: 0;
+    border: none;
 }
- .scoreHint{
-   position:absolute; 
-    left: 1150px; 
-} 
-#scorePanel {
-    width: 200px;
-    height: 220px;
+.scorePanel {
+    text-align: center;
     border: groove 5px rgb(59, 59, 75)  
 }
-#scorePanel p {
-    font-size: 2em;
+.scorePanel p {
+    font-size: 1.5em;
     text-decoration: underline;
-    font-weight: bold;
-    padding-top: 10px;
+    font-weight: bold;  
 }
-#score {
-    height: 100px;
-    font-size: 3em;
+#score {   
+    font-size: 2em;
     font-weight: bold;
     color:aliceblue;
 }
-.hint {
-    width: 200px;
+
+@media (max-width: 768px) {
+    .gamePanel {
+        flex: 1 1 100%;
+    }
+    img {
+        max-width: 10%;
+    }
 }
