--- a/matching-game.css
+++ b/matching-game.css
@@ -15,7 +15,7 @@ h1{
 }
 .style {
     color: rgb(192, 146, 187);
-    font-size: 1.3em;
+    font-size: 1.2em;
 }
 #btnStart, #btnEnd {
     background-color: rgb(43, 80, 115);
@@ -56,6 +56,7 @@ img {
     font-size: 1.5em;
     text-decoration: underline;
     font-weight: bold;  
+    color: rgb(47, 47, 59)
 }
 #score {   
     font-size: 2em;
@@ -69,5 +70,12 @@ img {
     }
     img {
         max-width: 10%;
+    }
+    .intro, .style {
+        font-size: 1em;
+    }
+    .intro span {
+        font-size: 1.2em;
+        font-weight: bold;
     }
 }
